--- a/app/src/main/res/layout/fragment_tv_show.xml
+++ b/app/src/main/res/layout/fragment_tv_show.xml
@@ -1,14 +1,16 @@
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.felix.moviedb.moviedb.activities.MovieListFragment">
+    tools:context="com.felix.moviedb.moviedb.activities.MovieListFragment"
+    android:orientation="vertical"
+    android:paddingBottom="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="10dp">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical"-->
+        <!--android:paddingBottom="10dp">-->
 
 
         <android.support.v7.widget.RecyclerView
@@ -16,6 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
-</android.support.v4.widget.NestedScrollView>
+</LinearLayout>
