--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:background="?colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             />
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
@@ -28,12 +29,8 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/person_details_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        </android.support.v4.view.ViewPager>
-
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
