--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -21,7 +21,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
-                android:fitsSystemWindows="true"
                 app:expandedTitleGravity="center_vertical|center_horizontal"
                 app:scrimVisibleHeightTrigger="250dp"
                 app:statusBarScrim="@android:color/holo_red_light"
@@ -40,9 +39,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|left"
                     app:layout_collapseMode="parallax"
-                    android:padding="10dp"
+                    android:paddingLeft="6dp"
+                    android:paddingRight="6dp"
+                    android:paddingBottom="6dp"
                     android:background="@color/colorAccent">
-
 
                     <TextView
                         android:id="@+id/rating"
@@ -53,7 +53,6 @@
                         android:textSize="18sp"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentRight="true"
-                        android:gravity="center_vertical"
                         />
 
                     <ImageView
@@ -62,6 +61,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_grade_black_24dp"
+                        android:paddingTop="4dp"
                         />
 
                     <TextView
@@ -79,8 +79,6 @@
                     app:layout_collapseMode="pin"
                     />
 
-
-
             </android.support.design.widget.CollapsingToolbarLayout>
 
         </android.support.design.widget.AppBarLayout>
@@ -89,12 +87,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?android:attr/detailsElementBackground"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
+            >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
                 <!-- Show Creators -->
                 <TextView
                     android:layout_width="match_parent"
@@ -104,6 +104,7 @@
                     android:textStyle="bold|italic"
                     android:padding="6dp"
                     android:textAllCaps="true"
+                    android:visibility="gone"
                     android:textColor="#111"
                     />
 
@@ -170,37 +171,9 @@
                     android:layout_marginTop="4dp"
                     android:textSize="13sp"
                     android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
                     />
 
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Seasons"
-                    android:textSize="14sp"
-                    android:textStyle="bold|italic"
-                    android:padding="6dp"
-                    android:textAllCaps="true"
-                    android:textColor="#111"
-                    />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:elevation="2dp">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/season_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="8dp"
-                   />
-
-                </LinearLayout>
-
-                <!-- Tv Show Cast List -->
+                <!-- Cast List-->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -243,20 +216,8 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="8dp"
                     android:textSize="13sp"/>
-
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floating_action_btn"
-            android:layout_width="56dp"
-            android:scaleType="fitXY"
-            android:layout_height="56dp"
-            android:src="@drawable/ic_comment_black_24dp"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="20dp"/>
-
-
     </android.support.design.widget.CoordinatorLayout>
 
 
