--- a/app/src/main/res/layout/movie_new_viewholder.xml
+++ b/app/src/main/res/layout/movie_new_viewholder.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="160dp"
-    android:layout_height="wrap_content"
+    android:layout_width="115dp"
+    android:layout_height="250dp"
     android:id="@+id/movie_holder_container">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="match_parent"
         card_view:cardCornerRadius="4dp"
         card_view:cardBackgroundColor="@color/cardview_light_background"
         android:layout_margin="4dp"
@@ -32,10 +32,13 @@
                 android:id="@+id/movie_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textAlignment="center"
                 android:textColor="@color/cardview_dark_background"
-                android:padding="10dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:paddingBottom="4dp"
                 android:maxLines="2"
                 />
 
@@ -51,31 +54,33 @@
                 <TextView
                     android:id="@+id/movie_release_date"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
+                    android:layout_alignParentBottom="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="12dp"
                     android:gravity="bottom"
-                    />
-
-                <TextView
-                    android:id="@+id/movie_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5.4"
-                    android:textSize="18sp"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"/>
-
-                <ImageView
-                    android:id="@+id/rating_icon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_grade_black_24dp"
-                    android:layout_toLeftOf="@id/movie_rating"
-                    android:paddingTop="4dp"
 
                     />
+
+                <!--<TextView-->
+                    <!--android:id="@+id/movie_rating"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="5.4"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:gravity="center_vertical|center_horizontal"-->
+                    <!--android:layout_alignParentTop="true"-->
+                    <!--android:layout_alignParentRight="true"/>-->
+
+                <!--<ImageView-->
+                    <!--android:id="@+id/rating_icon"-->
+                    <!--android:layout_width="20dp"-->
+                    <!--android:layout_height="20dp"-->
+                    <!--android:src="@drawable/ic_grade_black_24dp"-->
+                    <!--android:layout_toLeftOf="@id/movie_rating"-->
+                    <!--android:paddingTop="4dp"-->
+
+                    <!--/>-->
 
 
             </RelativeLayout>
