--- a/app/src/main/res/layout/movie_viewholder.xml
+++ b/app/src/main/res/layout/movie_viewholder.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+        android:id="@+id/movie_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
+            android:clickable="true"
+            android:background="?android:attr/selectableItemBackground"
           >
             <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/movie_image"
@@ -32,10 +34,11 @@
                 android:id="@+id/movie_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textAlignment="center"
                 android:textColor="@color/cardview_dark_background"
-                android:padding="10dp"
+                android:padding="4dp"
+
                 />
 
             <RelativeLayout
@@ -54,27 +57,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="bottom"
+                    android:textSize="12dp"
                     />
 
-                <TextView
-                    android:id="@+id/movie_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5.4"
-                    android:textSize="18sp"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"/>
+                <!--<TextView-->
+                    <!--android:id="@+id/movie_rating"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="5.4"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:gravity="center_vertical|center_horizontal"-->
+                    <!--android:layout_alignParentTop="true"-->
+                    <!--android:layout_alignParentRight="true"/>-->
 
-                <ImageView
-                    android:id="@+id/rating_icon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_grade_black_24dp"
-                    android:layout_toLeftOf="@id/movie_rating"
-                    android:paddingTop="4dp"
+                <!--<ImageView-->
+                    <!--android:id="@+id/rating_icon"-->
+                    <!--android:layout_width="20dp"-->
+                    <!--android:layout_height="20dp"-->
+                    <!--android:src="@drawable/ic_grade_black_24dp"-->
+                    <!--android:layout_toLeftOf="@id/movie_rating"-->
+                    <!--android:paddingTop="4dp"-->
 
-                    />
+                    <!--/>-->
 
 
             </RelativeLayout>
