--- a/app/src/main/res/layout/viewholder_season_item.xml
+++ b/app/src/main/res/layout/viewholder_season_item.xml
@@ -7,6 +7,7 @@
     app:cardElevation="@dimen/cardview_default_elevation"
     android:layout_margin="4dp"
     app:cardBackgroundColor="@color/cardview_dark_background"
+    android:id="@+id/season_item_container"
     >
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,10 +22,10 @@
             android:id="@+id/season_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="26sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:background="#FFF"
-            android:padding="6dp"
+            android:padding="4dp"
             android:alpha="0.9"
             android:layout_gravity="center_horizontal|center_vertical"/>
 
@@ -34,10 +35,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_gravity="bottom|right"
             android:background="#FFF"
-            android:padding="4dp"
+            android:padding="2dp"
+            android:alpha="0.9"
             android:gravity="center_horizontal|center_vertical"/>
 
 
