--- a/app/src/main/res/menu/movie_list_menu.xml
+++ b/app/src/main/res/menu/movie_list_menu.xml
@@ -1,8 +1,15 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/search_icon"
+        android:title="Search"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_search_black_24dp"
+        />
 
-    <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_filter"
         android:title="Filter"
         android:icon="@drawable/ic_filter_list_black_24dp"
-        android:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+
 </menu>
